--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ is_501c3: true
 #ONLINE DONATIONS & EMAIL SIGNUPS
 #To use these services, enter the required usernames. For further instructions, consult the README file.
 #If you do not wish to use a service, simply remove everything after the colon (:), leaving the item blank
-donorbox_campaign_name:
+donorbox_campaign_name: the-kaden-fund
 tinyletter_username:
 
 #SEARCH ENGINES
