--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ is_501c3: true
 #To use these services, enter the required usernames. For further instructions, consult the README file.
 #If you do not wish to use a service, simply remove everything after the colon (:), leaving the item blank
 donorbox_campaign_name: the-kaden-fund
-tinyletter_username:
+tinyletter_username: ohio
 
 #SEARCH ENGINES
 #Changing this next setting to 'true' will allow your site to be indexed by search engines (like Google)
